# podcast-client

./: .gitignore  README.md
src/: CMakeLists.txt  HttpClient.cpp  HttpClient.hpp  Iterator.hpp  MyUtils.cpp  MyUtils.hpp  XmlDoc.cpp  XmlDoc.hpp  XmlNode.cpp  XmlNode.hpp  conanfile.py  main.cpp
